--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 </head>
 <body>
     <header>
-        <img src="path/to/your/logo.png" alt="Logo">
+        <img src="Lambda VP Logo - White Text" alt="Logo">
     </header>
     <div class="content">
         <div class="left">
