--- a/index.html
+++ b/index.html
@@ -4,20 +4,23 @@
     <title>My Website</title>
     <style>
         body {
-            background-color: #2C4753;
+            background-color: #2c4760;
             color: white;
             font-family: 'Roboto Condensed', sans-serif;
             margin: 0;
             padding: 0;
             display: flex;
             flex-direction: column;
-            justify-content: center;
+            justify-content: flex-start;
             align-items: center;
-            height: 100vh;
+            min-height: 100vh;
         }
         header {
             text-align: center;
-            margin-bottom: 20px;
+            margin-bottom: 20px; /* Adjust this value to change the spacing */
+        }
+        header img {
+            max-width: 600px;
         }
         .content {
             display: flex;
