--- a/index.html
+++ b/index.html
@@ -55,13 +55,11 @@
             font-size: 1.25rem; /* Adjusted font size */
             color: #F2F2F2;
         }
-
         /* Additional styles for text below headings */
         .left p, .right p {
             font-size: 1.1rem; /* Slightly larger font size */
             margin-top: 5px; /* Adjust spacing */
         }
-
         /* Additional media queries for finer control */
         @media (max-width: 1200px) {
             .left h2, .right h2 {
@@ -71,7 +69,6 @@
                 font-size: 1rem;
             }
         }
-
         @media (max-width: 800px) {
             .left h2, .right h2 {
                 font-size: 1.6rem;
@@ -80,7 +77,6 @@
                 font-size: 0.9rem;
             }
         }
-
         @media (max-width: 400px) {
             .left h2, .right h2 {
                 font-size: 1.4rem;
@@ -88,6 +84,13 @@
             .left p, .right p {
                 font-size: 0.8rem;
             }
+        }
+        /* Styles for the email */
+        .email {
+            margin-top: 20px;
+            font-size: 1rem;
+            text-align: center;
+            color: #F2F2F2;
         }
     </style>
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed&display=swap" rel="stylesheet">
@@ -105,6 +108,9 @@
             <h2>Venture Capital</h2>
             <p>We invest in software companies from Seed to Series B</p>
         </div>
+    </div>
+    <div class="email">
+        info@lambdavp.com
     </div>
 </body>
 </html>
