--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
     </header>
     <div class="content">
         <div class="left">
-            <h2>Private Equity</h2>
-            <p>We buy software companies with $2M+ in revenue</p>
+            <h2>Acquisitions</h2>
+            <p>We want to buy a software company with $2M+ of revenue</p>
         </div>
         <div class="right">
             <h2>Venture Capital</h2>
